src/objects/tdc_tsw__Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Label__c</fullName>
        <description>This field is made so that it can be used in Process Builders.</description>
        <label>Answer Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark this answer as default and send the next question selected.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Next_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Next Question that would be sent from the survey when this answer is received.</inlineHelpText>
        <label>Next Question</label>
        <referenceTo>tdc_tsw__Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>NQAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Possible_Answers__c</fullName>
        <inlineHelpText>Enter a set of ‘||’ separated answers eg., Coffee || cofee || coffe etc.</inlineHelpText>
        <label>Possible Answers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__Question__c</fullName>
        <label>Question</label>
        <referenceTo>tdc_tsw__Question__c</referenceTo>
        <relationshipLabel>Answers (Question)</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tdc_tsw__isLooping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLooping</label>
        <type>Checkbox</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>